[gd_scene load_steps=3 format=3 uid="uid://1gsmu2i4e1cu"]

[ext_resource type="Script" uid="uid://icomcfg2xfvm" path="res://scripts/QuizGame.gd" id="1_05y5j"]
[ext_resource type="Texture2D" uid="uid://dfu6kuveldhhn" path="res://assets/interactive_background.png" id="2_ulv70"]

[node name="QuizGame" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 729.0
texture = ExtResource("2_ulv70")
expand_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_05y5j")

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 421.0
offset_top = 114.0
offset_right = 1015.0
offset_bottom = 268.0
theme_override_font_sizes/font_size = 32
autowrap_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 498.0
offset_top = 341.0
offset_right = 742.0
offset_bottom = 644.0
alignment = 1

[node name="Option A" type="Button" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2

[node name="Option B" type="Button" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2

[node name="Option C" type="Button" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2

[node name="Option D" type="Button" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2

[node name="FeedbackLabel" type="Label" parent="CanvasLayer"]
offset_left = 29.0
offset_top = 64.0
offset_right = 117.0
offset_bottom = 120.0
autowrap_mode = 3

[node name="NextButton" type="Button" parent="CanvasLayer"]
offset_left = 1009.0
offset_top = 565.0
offset_right = 1096.0
offset_bottom = 603.0
text = "Next"

[node name="Button" type="Button" parent="."]
offset_left = 119.0
offset_top = 558.0
offset_right = 221.0
offset_bottom = 605.0
text = "Back"

[connection signal="pressed" from="Button" to="CanvasLayer" method="_on_BackButton_pressed"]
